data/derived/sp14/progs/unify/prog0698.ml.out
Characters 62-72:
  listReverse ([n mod 10] append digitsOfInt (n/10) );;
               ^^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
